--- a/pics.html
+++ b/pics.html
@@ -22,30 +22,30 @@
     </head>
 <body>
 <div id="pics">
-<div id="space"><img src="./1.jpeg" alt="1" height="200px"> </div>
-<div id="space"><img src="./11.jpeg" alt="24" height="200px"></div>
-<div id="space"><img src="./m1.jpeg" alt="10" height="200px"></div>
-<div id="space"><img src="./c1.jpeg" alt="6" height="200px"></div>
-<div id="space"><img src="./m3.jpeg" alt="12" height="200px"></div>
-<div id="space"><img src="./2.jpeg" alt="2" height="200px"> </div>
-<div id="space"><img src="./12.jpeg" alt="25" height="200px"></div>
-<div id="space"><img src="./m4.jpeg" alt="13" height="200px"></div>
-<div id="space"><img src="./c2.jpeg" alt="7" height="200px"></div>
-<div id="space"><img src="./m5.jpeg" alt="14" height="200px"></div>
-<div id="space"><img src="./3.jpeg" alt="3" height="200px"></div>
-<div id="space"><img src="./m6.jpeg" alt="15" height="200px"></div>
-<div id="space"><img src="./c3.jpeg" alt="8" height="200px"></div>
-<div id="space"><img src="./6.jpeg" alt="19" height="200px"></div>
-<div id="space"><img src="./m2.jpeg" alt="11" height="200px"></div>
-<div id="space"><img src="./7.jpeg" alt="20" height="200px"></div>
-<div id="space"><img src="./4.jpeg" alt="4" height="200px"></div>
-<div id="space"><img src="./m7.jpeg" alt="16" height="200px"></div>
-<div id="space"><img src="./8.jpeg" alt="21" height="200px"></div>
-<div id="space"><img src="./c4.jpeg" alt="9" height="200px"></div>
-<div id="space"><img src="./5.jpeg" alt="5" height="200px"></div>
-<div id="space"><img src="./m8.jpeg" alt="17" height="200px"></div>
-<div id="space"><img src="./9.jpeg" alt="22" height="200px"></div>
-<div id="space"><img src="./m9.jpeg" alt="18" height="200px"></div>
+<div id="space"><img src=".https://picsum.photos/300/200" alt="1" height="200px"> </div>
+<div id="space"><img src="https://picsum.photos/200" alt="24" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="10" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="6" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="12" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="2" height="200px"> </div>
+<div id="space"><img src="https://picsum.photos/200" alt="25" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="13" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="7" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="14" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="3" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="15" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="8" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="19" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="11" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="20" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="4" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="16" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="21" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="9" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200/300" alt="5" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="17" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="22" height="200px"></div>
+<div id="space"><img src="https://picsum.photos/200" alt="18" height="200px"></div>
 
 </div>
 </body>
