--- a/pics.html
+++ b/pics.html
@@ -44,7 +44,7 @@
 <div id="space"><img src="https://picsum.photos/200/300" alt="9" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="5" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/300/200" alt="17" height="200px"></div>
-<div id="space"><img src="https://picsum.photos/200" alt="22" height="200px"></div>
+<div id="space"><img src="./m8.jpeg" alt="22" height="200px"></div>
 <div id="space"><img src="./m9.jpeg" alt="18" height="200px"></div>
 
 </div>
