--- a/pics.html
+++ b/pics.html
@@ -40,9 +40,9 @@
 <div id="space"><img src="https://picsum.photos/200" alt="20" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="4" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="16" height="200px"></div>
-<div id="space"><img src="https://picsum.photos/300/200" alt="21" height="200px"></div>
+<div id="space"><img src="./c1.jpeg" alt="21" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="9" height="200px"></div>
-<div id="space"><img src="https://picsum.photos/200/300" alt="5" height="200px"></div>
+<div id="space"><img src="./m7.jpeg" alt="5" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/300/200" alt="17" height="200px"></div>
 <div id="space"><img src="./m8.jpeg" alt="22" height="200px"></div>
 <div id="space"><img src="./m9.jpeg" alt="18" height="200px"></div>
