--- a/pics.html
+++ b/pics.html
@@ -37,12 +37,12 @@
 <div id="space"><img src="https://picsum.photos/300/200" alt="8" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="19" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/300/200" alt="11" height="200px"></div>
-<div id="space"><img src="https://picsum.photos/200" alt="20" height="200px"></div>
-<div id="space"><img src="https://picsum.photos/200/300" alt="4" height="200px"></div>
+<div id="space"><img src="./m2" alt="20" height="200px"></div>
+<div id="space"><img src="./m3" alt="4" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="16" height="200px"></div>
-<div id="space"><img src="./c1.jpeg" alt="21" height="200px"></div>
+<div id="space"><img src="./m6.jpeg" alt="21" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="9" height="200px"></div>
-<div id="space"><img src="./m7.jpeg" alt="5" height="200px"></div>
+<div id="space"><img src="./m4.jpeg" alt="5" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/300/200" alt="17" height="200px"></div>
 <div id="space"><img src="./m8.jpeg" alt="22" height="200px"></div>
 <div id="space"><img src="./m9.jpeg" alt="18" height="200px"></div>
