--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 <div id="one">
     <h2><u>The Man of the Hour</u></h2>
-    <p><img src="https://picsum.photos/200/300" alt="birthday boy" height="200px"><br>
+    <p><img src="./11.jpeg" alt="birthday boy" height="200px"><br>
     Happy Birthday to you!</p>
 </div>
 <div id="two">
