--- a/pics.html
+++ b/pics.html
@@ -22,7 +22,7 @@
     </head>
 <body>
 <div id="pics">
-<div id="space"><img src=".https://picsum.photos/300/200" alt="1" height="200px"> </div>
+<div id="space"><img src="https://picsum.photos/300/200" alt="1" height="200px"> </div>
 <div id="space"><img src="https://picsum.photos/200" alt="24" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="10" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="6" height="200px"></div>
@@ -37,8 +37,8 @@
 <div id="space"><img src="https://picsum.photos/300/200" alt="8" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="19" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/300/200" alt="11" height="200px"></div>
-<div id="space"><img src="./m2" alt="20" height="200px"></div>
-<div id="space"><img src="./m3" alt="4" height="200px"></div>
+<div id="space"><img src="./m2.jpeg" alt="20" height="200px"></div>
+<div id="space"><img src="./m3.jpeg" alt="4" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200" alt="16" height="200px"></div>
 <div id="space"><img src="./m6.jpeg" alt="21" height="200px"></div>
 <div id="space"><img src="https://picsum.photos/200/300" alt="9" height="200px"></div>
